
- Libxml:
  . Fixed bug #79191 (Error in SoapClient ctor disables DOMDocument::save()).
    (Nikita, cmb)

- MBString:
  . Fixed bug #79154 (mb_convert_encoding() can modify $from_encoding). (cmb)

- MySQLnd:
  . Fixed bug #79084 (mysqlnd may fetch wrong column indexes with MYSQLI_BOTH).
    (cmb)

- OpenSSL:
  . Fixed bug #79145 (openssl memory leak). (cmb, Nikita)

- Phar:
  . Fixed bug #76584 (PharFileInfo::decompress not working). (cmb)

- Reflection:
  . Fixed bug #79115 (ReflectionClass::isCloneable call reflected class
    __destruct). (Nikita)

- SPL:
  . Fixed bug #79151 (heap use after free caused by
    spl_dllist_it_helper_move_forward). (Nikita)

- Standard:
  . Fixed bug #78902 (Memory leak when using stream_filter_append). (liudaixiao)

- Testing:
  . Fixed bug #78090 (bug45161.phpt takes forever to finish). (cmb)

- XSL:
  . Fixed bug #70078 (XSL callbacks with nodes as parameter leak memory). (cmb)

23 Jan 2020, PHP 7.3.14

- Core
  . Fixed bug #78999 (Cycle leak when using function result as temporary).
    (Dmitry)

- CURL:
  . Fixed bug #79033 (Curl timeout error with specific url and post). (cmb)

- Date:
  . Fixed bug #79015 (undefined-behavior in php_date.c). (cmb)

- DBA:
  . Fixed bug #78808 ([LMDB] MDB_MAP_FULL: Environment mapsize limit reached).
    (cmb)

- Fileinfo:
  . Fixed bug #74170 (locale information change after mime_content_type).
    (Sergei Turchanov)

- GD:
  . Fixed bug #78923 (Artifacts when convoluting image with transparency).
    (wilson chen)
  . Fixed bug #79067 (gdTransformAffineCopy() may use unitialized values). (cmb)
  . Fixed bug #79068 (gdTransformAffineCopy() changes interpolation method).
    (cmb)

- Libxml:
  . Fixed bug #79029 (Use After Free's in XMLReader / XMLWriter). (Laruence)

- Mbstring:
  . Fixed bug #79037 (global buffer-overflow in `mbfl_filt_conv_big5_wchar`). 
    (CVE-2020-7060) (Nikita)

- OPcache:
  . Fixed bug #79040 (Warning Opcode handlers are unusable due to ASLR). (cmb)

- Pcntl: